# chr-ocr

./: .gitignore  MISSING SPACE.MD  README.md  agents.md  eval_results.txt  out-test.png-out.png.txt  paper-urls.txt  pyproject.toml  python server spec.md
backlog/: config.yml
configs/: sweep_mixture_ratio.json  sweep_mixture_ratio_v2.json  sweep_mixture_ratio_v3.json  sweep_mixture_ratio_v4.json  sweep_mixture_ratio_v5.json  train_cnt.json  train_mixed.json  train_mixed_decay.json  train_recovery.json  train_unicharset_finetune.json  train_unicharset_finetune_new.json
inference/: __init__.py  candidate_extractor.py  search_index.py
phoenix/: __init__.py  config.py
scratch/: debug_hyphenation.py
scripts/: add_predicted_lang_to_manifest.py  align_verses.py  analyze_dataset_character_frequencies.py  analyze_ocr_discrepancies.py  apply_space_corrections.py  augment_dataset.py  augment_dynamic.py  call-tesseract  classify_layout.py  clean-img  clean_manifest_errors.py  config.py  diagnose_columns.py  download_scans.py  enrich_manifest_with_ftm.py  evaluate_lang_classification.py  evaluate_mixed_model.py  evaluate_split.sh  evaluate_top_n.py  evaluate_v2.sh  extract_lines.py  filter_manifest.py  find_line_class_params.py  find_missing_spaces.py  generate_binarization_graphs.py  generate_cnt_viewer.py  generate_confusion_matrix.py  generate_performance_graphs.py  integrate_cnt.py  migrate_v2_crops.py  mix_datasets.py  package_cnt_test_data.py  plot_layout.py  prepare_splits.sh  prepare_training_data.py  preview_bounding_boxes.py  process_all_cnt.py  recreate_crops.py  (+24 more)
(+439 files in other folders)
