[project]
name = "phoenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "blinker==1.9.0",
    "click==8.4.1",
    "doxapy>=0.9.7",
    "flask==3.1.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "levenshtein>=0.27.3",
    "markupsafe==3.0.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
    "python-dotenv==1.2.2",
    "python-levenshtein>=0.27.3",
    "scipy>=1.17.1",
    "surya-ocr>=0.20.0",
    "tesserocr>=2.10.0",
    "werkzeug==3.1.8",
]
